# brute

./: .env.example  .env.frontend.example  .gitignore  LICENSE  README.md  dev.sh  pyproject.toml  requirements.txt  setup.py
brute/: __main__.py  config.py
brute/api/: server.py
brute/core/: recovery.py
frontend/: index.html  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx  config.ts
frontend/src/components/: Navbar.tsx  SeedInput.tsx
frontend/src/pages/: About.tsx
frontend/src/styles/: theme.ts
tests/core/: test_recovery.py
